@@ -19,7 +19,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 /**
  * A precondition can be needs to be met after discovering migrations and prior to building changes. If it isn't met, the
@@ -110,7 +109,7 @@ interface Precondition {
 		return cypherResource.getSingleLineComments().stream().map(Precondition::parse)
 			.filter(Optional::isPresent)
 			.map(Optional::get)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	/**
